--- a/taskmanager/tasks/templates/tasks/task_list.html
+++ b/taskmanager/tasks/templates/tasks/task_list.html
@@ -8,11 +8,24 @@
     <h2>新規タスク作成</h2>
     <form method="post">
         {% csrf_token %}
-        <input type="text" name="title" placeholder="新しいタスクを入力">
+        <input type="text" name="title" placeholder="新しいタスクを入力"><br><br>
+        <label for="date">日付：</label>
+        <input type="date" name="date"><br><br>
+        <textarea name="description" placeholder="タスクの説明を入力" rows="4" cols="40"></textarea><br><br>
+        <label>タスクタイプ：</label>
+        <input type="radio" id="dairy" name="task_type" value="daily">
+        <label for="dairy">毎日</label>
+        <input type="radio" id="once" name="task_type" value="once" checked>
+        <label for="once">１回きり</label>
         <button type="submit">追加</button>
     </form>
 
     <hr>
+    <form method="post" action="{% url 'start_of_day' %}">
+        {% csrf_token %}
+        <button type="submit">業務開始</button>
+    </form>
+
 <h2>業務終了</h2>
 <form method="POST" action="{% url 'end_of_day' %}">
     {% csrf_token %}
@@ -28,6 +41,8 @@
             <li>
                 <span>{{ task.id }}</span>
                 <span>{{ task.title }}</span>
+                <span>{{ task.description }}</span>
+                <span>{{ task.date }}</span>
                 <a href="{% url 'task_edit' task.id %}">Edit</a>
                 <a href="{% url 'task_delete' task.id %}">Delete</a>
                 <form method="POST" action="{% url 'task_complete' task.id %}">
