--- a/taskmanager/tasks/templates/tasks/task_edit.html
+++ b/taskmanager/tasks/templates/tasks/task_edit.html
@@ -2,5 +2,6 @@
     {% csrf_token %}
     <label for="title">Title:</label>
     <input type="text" name="title" value="{{ task.title }}">
+    <textarea name="description">{{ task.description }}</textarea>
     <button type="submit">Save</button>
 </form>
