定型タスクの編集・削除機能を追加

--- a/taskmanager/tasks/templates/tasks/end_of_day_report.html
+++ b/taskmanager/tasks/templates/tasks/end_of_day_report.html
@@ -1,7 +1,8 @@
 {% csrf_token %}
 <h2>日報</h2>
+今日は
 {% for sent in report.splitlines %}
-<p>{{ sent }}</p>
+<p>{{ sent }}をしました</p>
 {% empty %}
 <p>今日完了したタスクはありません</p>
 {% endfor %}
