--- a/taskmanager/tasks/templates/tasks/task_list.html
+++ b/taskmanager/tasks/templates/tasks/task_list.html
@@ -34,10 +34,9 @@
 
     <hr>
 <h2>タスク一覧</h2>
-    <h3>未完了タスク</h3>
+    <h3>本日の未完了タスク</h3>
     <ul>
-        {% for task in tasks %}
-            {% if task.is_done == False %}
+        {% for task in incomplete_tasks %}
             <li>
                 <span>{{ task.id }}</span>
                 <span>{{ task.title }}</span>
@@ -50,21 +49,38 @@
                     <button type="submit">完了</button>
                 </form>
             </li>
-            {% endif %}
+        {% empty %}
+            <li>
+                本日の未完了タスクはありません
+            </li>
         {% endfor %}
     </ul> 
         <br>
-    <h3>完了タスク</h3>
+    <h3>本日の完了タスク</h3>
     <ul>
-        {% for task in tasks %}
-            {% if task.is_done == True %}
+        {% for task in completed_today_tasks %}
             <li>
                 <span>{{ task.id }}</span>
                 <span>{{ task.title }}</span>
                 <a href="{% url 'task_edit' task.id %}">Edit</a>
                 <a href="{% url 'task_delete' task.id %}">Delete</a>
             </li>
-            {% endif %}
+        {% empty %}
+            <li>今日完了したタスクはありません</li>
+        {% endfor %}
+    </ul>
+    <h3>毎日のタスク一覧</h3>
+    <ul>
+        {% for task in template_tasks %}
+            <li>
+                <span>{{ task.id }}</span>
+                <span>{{ task.title }}</span>
+                <span>{{ task.description }}</span>
+                <a href="{% url 'template_task_edit' task.id %}">Edit</a>
+                <a href="{% url 'template_task_delete' task.id %}">Delete</a>
+            </li>
+        {% empty %}
+            <li>定型タスクはありません</li>
         {% endfor %}
     </ul>
 </body>
