未来のタスクを表示

--- a/taskmanager/tasks/templates/tasks/task_list.html
+++ b/taskmanager/tasks/templates/tasks/task_list.html
@@ -62,6 +62,7 @@
             <li>
                 <span>{{ task.id }}</span>
                 <span>{{ task.title }}</span>
+                <span>{{ task.description }}</span>
                 <a href="{% url 'task_edit' task.id %}">Edit</a>
                 <a href="{% url 'task_delete' task.id %}">Delete</a>
             </li>
@@ -69,6 +70,21 @@
             <li>今日完了したタスクはありません</li>
         {% endfor %}
     </ul>
+
+    <h3>未来のタスク</h3>
+    <ul>
+        {% for task in future_tasks %}
+            <li>
+                <span>{{ task.id }}</span>
+                {{ task.title }} - {{ task.description }} - {{ task.date }}
+                <a href="{% url 'task_edit' task.id %}">Edit</a>
+                <a href="{% url 'task_delete' task.id %}">Delete</a>
+            </li>
+
+        {% endfor %}
+    </ul>
+    
+
     <h3>毎日のタスク一覧</h3>
     <ul>
         {% for task in template_tasks %}
