--- a/taskmanager/tasks/templates/tasks/task_edit.html
+++ b/taskmanager/tasks/templates/tasks/task_edit.html
@@ -1,8 +1,10 @@
 <form method="post">
     {% csrf_token %}
-    <label for="title">Title:</label>
-    <input type="text" name="title" value="{{ task.title }}">
+    <label for="title">タイトル:</label>
+    <input type="text" name="title" value="{{ task.title }}"><br>
+    <label for="date">日付：</label>
+    <input type="date" name="date"><br>
+    <label>詳細：</label><br>
     <textarea name="description">{{ task.description }}</textarea>
     <button type="submit">Save</button>
 </form>
-dairy
